# riva-app

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOOGLE_CHAT_PLAN.md  LICENSE  README.md  SECURITY.md  components.json  eslint.config.js  package.json  vite.config.ts
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: DESIGN_SYSTEM.md  I18N_PLAN.md  LIST_UX_IMPROVEMENTS.md  PLAN.md  REBRAND_FORGE_TO_RIVA.md  ROADMAP.md
scripts/: ROADMAP.md  release.sh  task-core.sh  task-prompts.sh  task.sh  taskrc.example
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sounds/: notification.aiff
src-tauri/src/: azure.rs  lib.rs  main.rs  mcp.rs  mcp_config.rs  openai.rs
src/components/: ElectricBorder.tsx
src/components/ui/: bell.tsx  (+17 more)
src/hooks/: use-azure-notification-polling.ts  use-global-shortcuts.ts  use-mcp-context-sync.ts
src/lib/: commands.ts  dayjs.ts  get-strict-context.tsx  tauri.ts  theme-manager.ts
src/routes/: index.tsx
src/store/: locale.ts  notifications.ts  openai.ts  session.ts  sidebar.ts  tasks-view.ts  theme.ts  types.ts
src/styles/: globals.css
src/types/: azure.ts  commands.ts  mcp.ts  notifications.ts  pipeline.ts  release.ts  routes.ts  theme.ts  work-item.ts
src/utils/: formatters.ts  mappers.ts  notification-sound.ts  search.ts  streak.ts  work-item-theme.ts
updater-proxy/: package.json  vercel.json
updater-proxy/api/: update.ts
(+283 files in other folders)
